create: added navbar & section book

--- a/index.html
+++ b/index.html
@@ -5,6 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ehya</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Roboto+Condensed:wght@700&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="navbar">
+      <div class="container">
+        <div class="navbar-top">
+          <a href="index.html" class="logo">
+            <img src="img/Logo.svg" alt="Logo: ehya" class="logo__image" />
+          </a>
+          <div class="navbar-menu">
+            <ul class="navbar-menu__item">
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Рекомендации</a>
+              </li>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Книги</a>
+              </li>
+              <li class="navbar-menu__item">
+                <a href="#" class="navbar-menu__link">Блог</a>
+              </li>
+            </ul>
+          </div>
+          <a href="#" class="navbar__button">
+            <p class="navbar__link">Получить</p>
+          </a>
+        </div>
+        <!-- /.navbar-top -->
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.navbar -->
+    <section class="book">
+      <div class="container">
+        <div class="book-info">
+          <div class="about-text">
+            <h1 class="about-title">Design Theory:</h1>
+            <span class="about-psycholigy"
+              >The Psychology of <br />
+              Graphic Design Pricing</span
+            >
+            <h4 class="about-subtitle">Книга Мишеля Янга</h4>
+            <span class="about-info"
+              >Спустя 15 лет я управляю собственной студией, выполнив тысячи
+              проектов для крупных клиентов. Теперь я делюсь своими золотыми
+              стратегиями ценообразования на творческую работу.</span
+            >
+            <div class="button">
+              <a href="#" class="button-outline">Купить сейчас</a>
+              <button class="button-primary">Читать демо</button>
+            </div>
+            <!-- /.buttons -->
+          </div>
+          <!-- /.about-text -->
+          <div class="about-book">
+            <img
+              src="img/Book-image.jpg"
+              alt="The psychology"
+              class="about-image"
+            />
+          </div>
+          <!-- /.about-book -->
+        </div>
+        <!-- /.book-info -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.about-book -->
+  </body>
 </html>
