--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="navbar">
+    <div class="navbar navbar__mobile--fixed">
       <div class="container">
         <div class="navbar-top">
           <a href="index.html" class="logo">
