--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
           <a href="#" class="navbar__button">
             <p class="navbar__link">Получить</p>
           </a>
+          <button class="menu-button navbar-top__menu-button">
+            <span class="menu-button__line"></span
+            ><span class="menu-button__line"></span
+            ><span class="menu-button__line"></span>
+          </button>
+          <!-- /.navbar-top__menu-btn -->
         </div>
         <!-- /.navbar-top -->
       </div>
