create: navbar menu

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
                 <a href="#" class="navbar-menu__link">Блог</a>
               </li>
             </ul>
+            <a href="#" class="navbar__button">
+              <p class="navbar__link">Получить</p>
+            </a>
           </div>
-          <a href="#" class="navbar__button">
-            <p class="navbar__link">Получить</p>
-          </a>
+
           <button class="menu-button navbar-top__menu-button">
             <span class="menu-button__line"></span
             ><span class="menu-button__line"></span
@@ -82,5 +83,6 @@
       <!-- /.container -->
     </section>
     <!-- /.about-book -->
+    <script src="js/main.js"></script>
   </body>
 </html>
