create: added recomendation section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,175 @@
       <!-- /.container -->
     </section>
     <!-- /.about-book -->
+    <section class="recomendation">
+      <div class="container">
+        <div class="recomendation-wrapper">
+          <div class="recomendation-book">
+            <h1 class="recomendation-title">Рекомендации</h1>
+            <div class="card-book">
+              <div class="card-image">
+                <img
+                  src="img/book/book-1.jpg"
+                  alt="Photo book"
+                  class="card-image"
+                />
+              </div>
+              <!-- /.card-image -->
+              <div class="card-info">
+                <h3 class="card-title">The World of Abstract Art</h3>
+                <h4 class="card-text">Art & Design</h4>
+                <span class="card-price">$25.00</span>
+                <button class="card-button">Купить</button>
+                <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
+              </div>
+              <!-- /.card-info -->
+            </div>
+            <!-- card-book -->
+            <div class="card-book">
+              <div class="card-image">
+                <img
+                  src="img/book/book-2.jpg"
+                  alt="Photo book"
+                  class="card-image"
+                />
+              </div>
+              <div class="card-info">
+                <h3 class="card-title">Educated : a Memoir</h3>
+                <h4 class="card-text">Education</h4>
+                <span class="card-price">$28.00</span>
+                <button class="card-button">Купить</button>
+                <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
+              </div>
+            </div>
+            <!-- card-book -->
+            <div class="card-book">
+              <div class="card-image">
+                <img
+                  src="img/book/book-3.jpg"
+                  alt="Photo book"
+                  class="card-image"
+                />
+              </div>
+              <div class="card-info">
+                <h3 class="card-title">The Blue Flowers Ray…</h3>
+                <h4 class="card-text">Novel</h4>
+                <span class="card-price">$19.50</span>
+                <button class="card-button">Купить</button>
+                <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
+              </div>
+            </div>
+            <!-- card-book -->
+            <div class="card-book">
+              <div class="card-image">
+                <img
+                  src="img/book/book-4.jpg"
+                  alt="Photo book"
+                  class="card-image"
+                />
+              </div>
+              <div class="card-info">
+                <h3 class="card-title">There There : a Novel by TO</h3>
+                <h4 class="card-text">Novel</h4>
+                <span class="card-price">$20.00</span>
+                <button class="card-button">Купить</button>
+                <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
+              </div>
+            </div>
+            <!-- card-book -->
+            <div class="card-book">
+              <div class="card-image">
+                <img
+                  src="img/book/book-5.jpg"
+                  alt="Photo book"
+                  class="card-image"
+                />
+              </div>
+              <div class="card-info">
+                <h3 class="card-title">WMNDFL : The Inspiration</h3>
+                <h4 class="card-text">Business</h4>
+                <span class="card-price">$23.00</span>
+                <button class="card-button">Купить</button>
+                <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
+              </div>
+            </div>
+            <!-- card-book -->
+            <div class="card-book">
+              <div class="card-image">
+                <img
+                  src="img/book/book-6.jpg"
+                  alt="Photo book"
+                  class="card-image"
+                />
+              </div>
+              <div class="card-info">
+                <h3 class="card-title">Making Things Happen</h3>
+                <h4 class="card-text">Motivation</h4>
+                <span class="card-price">$23.00</span>
+                <button class="card-button">Купить</button>
+                <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
+              </div>
+            </div>
+            <!-- card-book -->
+            <button class="more">Больше рекомендаций</button>
+          </div>
+          <!-- /.recomendation-book -->
+          <div class="top">
+            <h1 class="top-title">Топ Месяца</h1>
+            <div class="top-book">
+              <img
+                src="img/book/top-1.jpg"
+                alt="Photo book"
+                class="top-image"
+              />
+              <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
+              <span class="top-price">$23.00</span>
+              <button class="top-button">Купить</button>
+            </div>
+            <!-- /.top-book -->
+            <div class="top-book">
+              <img
+                src="img/book/top-2.jpg"
+                alt="Photo book"
+                class="top-image"
+              />
+              <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
+              <span class="top-price">$23.00</span>
+              <button class="top-button">Купить</button>
+            </div>
+            <!-- /.top-book -->
+            <div class="top-book">
+              <img
+                src="img/book/top-3.jpg"
+                alt="Photo book"
+                class="top-image"
+              />
+              <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
+              <span class="top-price">$23.00</span>
+              <button class="top-button">Купить</button>
+            </div>
+            <!-- /.top-book -->
+            <div class="top-book">
+              <img
+                src="img/book/top-4.jpg"
+                alt="Photo book"
+                class="top-image"
+              />
+              <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
+              <span class="top-price">$23.00</span>
+              <button class="top-button">Купить</button>
+            </div>
+            <!-- /.top-book -->
+            <button class="favorites-book">Лучшие книги</button>
+          </div>
+          <!-- /.top -->
+        </div>
+        <!-- /.recomendation-wrapper -->
+        <div class="recomendation-slider"></div>
+        <!-- /.recomendation-slider -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.recomendation -->
     <script src="js/main.js"></script>
   </body>
 </html>
