create: added section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
               </div>
             </div>
             <!-- card-book -->
-            <div class="card-book">
+          </div>
+          <div class="recomendation-booking">
+            <div class="card-booking">
               <div class="card-image">
                 <img
                   src="img/book/book-4.jpg"
@@ -158,7 +160,7 @@
               </div>
             </div>
             <!-- card-book -->
-            <div class="card-book">
+            <div class="card-booking">
               <div class="card-image">
                 <img
                   src="img/book/book-5.jpg"
@@ -175,7 +177,7 @@
               </div>
             </div>
             <!-- card-book -->
-            <div class="card-book">
+            <div class="card-booking">
               <div class="card-image">
                 <img
                   src="img/book/book-6.jpg"
@@ -192,66 +194,110 @@
               </div>
             </div>
             <!-- card-book -->
-            <button class="more">Больше рекомендаций</button>
           </div>
           <!-- /.recomendation-book -->
           <div class="top">
-            <h1 class="top-title">Топ Месяца</h1>
-            <div class="top-book">
-              <img
-                src="img/book/top-1.jpg"
-                alt="Photo book"
-                class="top-image"
-              />
-              <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
-              <span class="top-price">$23.00</span>
-              <button class="top-button">Купить</button>
+            <h1 class="top-headline">Топ Месяца</h1>
+            <div class="top__card-block">
+              <div class="top__card">
+                <div class="top-image">
+                  <img
+                    src="img/book/top-1.jpg"
+                    alt="Photo book"
+                    class="top-image"
+                  />
+                </div>
+                <div class="top-info">
+                  <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
+                  <span class="top-price">$23.00</span>
+                  <button class="top-button">Купить</button>
+                </div>
+              </div>
+
+              <div class="top__card">
+                <div class="top-image">
+                  <img
+                    src="img/book/top-2.jpg"
+                    alt="Photo book"
+                    class="top-image"
+                  />
+                </div>
+                <div class="top-info">
+                  <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
+                  <span class="top-price">$23.00</span>
+                  <button class="top-button">Купить</button>
+                </div>
+              </div>
+              <div class="top__card">
+                <div class="top-image">
+                  <img
+                    src="img/book/top-3.jpg"
+                    alt="Photo book"
+                    class="top-image"
+                  />
+                </div>
+                <div class="top-info">
+                  <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
+                  <span class="top-price">$23.00</span>
+                  <button class="top-button">Купить</button>
+                </div>
+              </div>
+
+              <div class="top__card">
+                <div class="top-image">
+                  <img
+                    src="img/book/top-4.jpg"
+                    alt="Photo book"
+                    class="top-image"
+                  />
+                </div>
+                <div class="top-info">
+                  <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
+                  <span class="top-price">$23.00</span>
+                  <button class="top-button">Купить</button>
+                </div>
+              </div>
+              <div class="top-line"></div>
+              <a href="#" class="favorites-link">Лучшие книги</a>
             </div>
             <!-- /.top-book -->
-            <div class="top-book">
-              <img
-                src="img/book/top-2.jpg"
-                alt="Photo book"
-                class="top-image"
-              />
-              <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
-              <span class="top-price">$23.00</span>
-              <button class="top-button">Купить</button>
-            </div>
-            <!-- /.top-book -->
-            <div class="top-book">
-              <img
-                src="img/book/top-3.jpg"
-                alt="Photo book"
-                class="top-image"
-              />
-              <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
-              <span class="top-price">$23.00</span>
-              <button class="top-button">Купить</button>
-            </div>
-            <!-- /.top-book -->
-            <div class="top-book">
-              <img
-                src="img/book/top-4.jpg"
-                alt="Photo book"
-                class="top-image"
-              />
-              <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
-              <span class="top-price">$23.00</span>
-              <button class="top-button">Купить</button>
-            </div>
-            <!-- /.top-book -->
-            <button class="favorites-book">Лучшие книги</button>
           </div>
           <!-- /.top -->
         </div>
-        <!-- /.recomendation-wrapper -->
+        <!-- /.top-card__block -->
+        <div class="more">
+          <button class="more">Больше рекомендаций</button>
+        </div>
+        <!-- /.more -->
+        <div class="line"></div>
         <div class="recomendation-slider"></div>
         <!-- /.recomendation-slider -->
       </div>
       <!-- /.container -->
     </section>
     <!-- /.recomendation -->
+    <section class="unreleased">
+      <div class="container">
+        <div class="unreleased-header">
+          <h1 class="unreleased-title">Неизданный книги</h1>
+          <div class="unreleased__logo">
+            <img src="#" alt="" class="unreleased__logo-icon" />
+            <img src="#" alt="" class="unreleased__logo-icon" />
+          </div>
+        </div>
+        <!-- /.unreleased-header -->
+        <div class="unreleased__book">
+          <img src="#" alt="" class="unreleased__book-image" />
+          <img src="#" alt="" class="unreleased__book-image" />
+          <img src="#" alt="" class="unreleased__book-image" />
+          <img src="#" alt="" class="unreleased__book-image" />
+          <img src="#" alt="" class="unreleased__book-image" />
+        </div>
+        <!-- /.unreleased-book -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.unreleased -->
     <script src="js/main.js"></script>
   </body>
 </html>
