--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
             <div class="card-book">
               <div class="card-image">
                 <img
-                  src="img/book/book-2.jpg"
+                  src="img/book/book-3.jpg"
                   alt="Photo book"
                   class="card-image"
                 />
               </div>
               <div class="card-info">
-                <h3 class="card-title">Educated : a Memoir</h3>
-                <h4 class="card-text">Education</h4>
-                <span class="card-price">$28.00</span>
+                <h3 class="card-title">The Blue Flowers Ray...</h3>
+                <h4 class="card-text">Novel</h4>
+                <span class="card-price">$19.50</span>
                 <button class="card-button">Купить</button>
                 <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
               </div>
@@ -127,15 +127,18 @@
             <div class="card-book">
               <div class="card-image">
                 <img
-                  src="img/book/book-3.jpg"
+                  src="img/book/book-5.jpg"
                   alt="Photo book"
                   class="card-image"
                 />
               </div>
               <div class="card-info">
-                <h3 class="card-title">The Blue Flowers Ray…</h3>
-                <h4 class="card-text">Novel</h4>
-                <span class="card-price">$19.50</span>
+                <h3 class="card-title">
+                  WMNDFL : <br />
+                  The &nbsp Inspiration
+                </h3>
+                <h4 class="card-text">Business</h4>
+                <span class="card-price">$23.00</span>
                 <button class="card-button">Купить</button>
                 <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
               </div>
@@ -146,15 +149,18 @@
             <div class="card-booking">
               <div class="card-image">
                 <img
-                  src="img/book/book-4.jpg"
+                  src="img/book/book-2.jpg"
                   alt="Photo book"
                   class="card-image"
                 />
               </div>
               <div class="card-info">
-                <h3 class="card-title">There There : a Novel by TO</h3>
-                <h4 class="card-text">Novel</h4>
-                <span class="card-price">$20.00</span>
+                <h3 class="card-title">
+                  Educated : <br />
+                  a Memoir
+                </h3>
+                <h4 class="card-text">Education</h4>
+                <span class="card-price">$28.00</span>
                 <button class="card-button">Купить</button>
                 <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
               </div>
@@ -163,15 +169,18 @@
             <div class="card-booking">
               <div class="card-image">
                 <img
-                  src="img/book/book-5.jpg"
+                  src="img/book/book-4.jpg"
                   alt="Photo book"
                   class="card-image"
                 />
               </div>
               <div class="card-info">
-                <h3 class="card-title">WMNDFL : The Inspiration</h3>
-                <h4 class="card-text">Business</h4>
-                <span class="card-price">$23.00</span>
+                <h3 class="card-title">
+                  There There : <br />
+                  a Novel by TO
+                </h3>
+                <h4 class="card-text">Novel</h4>
+                <span class="card-price">$20.00</span>
                 <button class="card-button">Купить</button>
                 <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
               </div>
@@ -186,7 +195,10 @@
                 />
               </div>
               <div class="card-info">
-                <h3 class="card-title">Making Things Happen</h3>
+                <h3 class="card-title">
+                  Making <br />
+                  Things Happen
+                </h3>
                 <h4 class="card-text">Motivation</h4>
                 <span class="card-price">$23.00</span>
                 <button class="card-button">Купить</button>
@@ -208,7 +220,10 @@
                   />
                 </div>
                 <div class="top-info">
-                  <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
+                  <h3 class="top-title">
+                    Sprint : Solve, <br />
+                    Test in 5 Days
+                  </h3>
                   <span class="top-price">$23.00</span>
                   <button class="top-button">Купить</button>
                 </div>
@@ -223,7 +238,7 @@
                   />
                 </div>
                 <div class="top-info">
-                  <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
+                  <h3 class="top-title">Hacking Growth Break Problem</h3>
                   <span class="top-price">$23.00</span>
                   <button class="top-button">Купить</button>
                 </div>
@@ -237,7 +252,10 @@
                   />
                 </div>
                 <div class="top-info">
-                  <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
+                  <h3 class="top-title">
+                    Very Nice a <br />
+                    Novel by Mercy
+                  </h3>
                   <span class="top-price">$23.00</span>
                   <button class="top-button">Купить</button>
                 </div>
@@ -252,7 +270,7 @@
                   />
                 </div>
                 <div class="top-info">
-                  <h3 class="top-title">Sprint : Solve, Test in 5 Days</h3>
+                  <h3 class="top-title">Hooked : How to Build Products</h3>
                   <span class="top-price">$23.00</span>
                   <button class="top-button">Купить</button>
                 </div>
