create: added section unreleased

--- a/index.html
+++ b/index.html
@@ -297,19 +297,43 @@
     <section class="unreleased">
       <div class="container">
         <div class="unreleased-header">
-          <h1 class="unreleased-title">Неизданный книги</h1>
+          <h1 class="unreleased-title">Неизданные книги</h1>
           <div class="unreleased__logo">
-            <img src="#" alt="" class="unreleased__logo-icon" />
-            <img src="#" alt="" class="unreleased__logo-icon" />
+            <img src="img/next.png" alt="Icon: next" class="unreleased__logo" />
+            <img
+              src="img/back.png"
+              alt="Icon: back"
+              class="unreleased__logo-icon"
+            />
           </div>
         </div>
         <!-- /.unreleased-header -->
         <div class="unreleased__book">
-          <img src="#" alt="" class="unreleased__book-image" />
-          <img src="#" alt="" class="unreleased__book-image" />
-          <img src="#" alt="" class="unreleased__book-image" />
-          <img src="#" alt="" class="unreleased__book-image" />
-          <img src="#" alt="" class="unreleased__book-image" />
+          <img
+            src="img/unreleased/book-1.png"
+            alt="Photo: Book"
+            class="unreleased__book-img"
+          />
+          <img
+            src="img/unreleased/book-2.png"
+            alt="Photo: Book"
+            class="unreleased__book-image"
+          />
+          <img
+            src="img/unreleased/book-3.png"
+            alt="Photo: Book"
+            class="unreleased__book-image"
+          />
+          <img
+            src="img/unreleased/book-4.png"
+            alt="Photo: Book"
+            class="unreleased__book-image"
+          />
+          <img
+            src="img/unreleased/book-5.png"
+            alt="Photo: Book"
+            class="unreleased__book-image"
+          />
         </div>
         <!-- /.unreleased-book -->
       </div>
