--- a/index.html
+++ b/index.html
@@ -101,8 +101,15 @@
                 <h3 class="card-title">The World of Abstract Art</h3>
                 <h4 class="card-text">Art & Design</h4>
                 <span class="card-price">$25.00</span>
-                <button class="card-button">Купить</button>
-                <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
+                <div class="like">
+                  <button class="card-button">Купить</button>
+                  <img
+                    src="img/heart.svg"
+                    alt="Icon: heart"
+                    class="card-logo"
+                  />
+                </div>
+                <!-- /.like -->
               </div>
               <!-- /.card-info -->
             </div>
@@ -119,8 +126,15 @@
                 <h3 class="card-title">The Blue Flowers Ray...</h3>
                 <h4 class="card-text">Novel</h4>
                 <span class="card-price">$19.50</span>
-                <button class="card-button">Купить</button>
-                <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
+                <div class="like">
+                  <button class="card-button">Купить</button>
+                  <img
+                    src="img/heart.svg"
+                    alt="Icon: heart"
+                    class="card-logo"
+                  />
+                </div>
+                <!-- /.like -->
               </div>
             </div>
             <!-- card-book -->
@@ -139,8 +153,15 @@
                 </h3>
                 <h4 class="card-text">Business</h4>
                 <span class="card-price">$23.00</span>
-                <button class="card-button">Купить</button>
-                <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
+                <div class="like">
+                  <button class="card-button">Купить</button>
+                  <img
+                    src="img/heart.svg"
+                    alt="Icon: heart"
+                    class="card-logo"
+                  />
+                </div>
+                <!-- /.like -->
               </div>
             </div>
             <!-- card-book -->
@@ -161,8 +182,15 @@
                 </h3>
                 <h4 class="card-text">Education</h4>
                 <span class="card-price">$28.00</span>
-                <button class="card-button">Купить</button>
-                <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
+                <div class="like">
+                  <button class="card-button">Купить</button>
+                  <img
+                    src="img/heart.svg"
+                    alt="Icon: heart"
+                    class="card-logo"
+                  />
+                </div>
+                <!-- /.like -->
               </div>
             </div>
             <!-- card-book -->
@@ -181,8 +209,15 @@
                 </h3>
                 <h4 class="card-text">Novel</h4>
                 <span class="card-price">$20.00</span>
-                <button class="card-button">Купить</button>
-                <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
+                <div class="like">
+                  <button class="card-button">Купить</button>
+                  <img
+                    src="img/heart.svg"
+                    alt="Icon: heart"
+                    class="card-logo"
+                  />
+                </div>
+                <!-- /.like -->
               </div>
             </div>
             <!-- card-book -->
@@ -201,8 +236,15 @@
                 </h3>
                 <h4 class="card-text">Motivation</h4>
                 <span class="card-price">$23.00</span>
-                <button class="card-button">Купить</button>
-                <img src="img/heart.svg" alt="Icon: heart" class="card-logo" />
+                <div class="like">
+                  <button class="card-button">Купить</button>
+                  <img
+                    src="img/heart.svg"
+                    alt="Icon: heart"
+                    class="card-logo"
+                  />
+                </div>
+                <!-- /.like -->
               </div>
             </div>
             <!-- card-book -->
