--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Roboto+Condensed:wght@700&family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -330,8 +331,60 @@
         </div>
         <!-- /.more -->
         <div class="line"></div>
-        <div class="recomendation-slider"></div>
-        <!-- /.recomendation-slider -->
+
+        <div class="slider">
+          <!-- Slider main container -->
+          <div class="swiper-container">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <div class="slider-block">
+                  <img
+                    src="img/slider/logo-1.svg"
+                    alt="Icon"
+                    class="slider-icon"
+                  />
+                  <h2 class="slider-title">Бизнес & Финансы</h2>
+                  <span class="slider-text">Книги про мир бизнеса</span>
+                </div>
+                <div class="slider-block">
+                  <img
+                    src="img/slider/logo-2.svg"
+                    alt="Icon"
+                    class="slider-icon"
+                  />
+                  <h2 class="slider-title">Самомотиватия</h2>
+                  <span class="slider-text">Книги о мотивации</span>
+                </div>
+                <div class="slider-block">
+                  <img
+                    src="img/slider/logo-3.svg"
+                    alt="Icon"
+                    class="slider-icon"
+                  />
+                  <h2 class="slider-title">Романы Теленовеллы</h2>
+                  <span class="slider-text">Книги с крутыми историями</span>
+                </div>
+                <div class="slider-block">
+                  <img
+                    src="img/slider/logo-4.svg"
+                    alt="Icon"
+                    class="slider-icon"
+                  />
+                  <h2 class="slider-title">Навыки будущего</h2>
+                  <span class="slider-text">Книги для самоподготовки </span>
+                </div>
+              </div>
+            </div>
+
+            <!-- If we need navigation buttons -->
+            <button class="slider-button slider-button--prev"></button>
+            <button class="slider-button slider-button--next"></button>
+          </div>
+          <!-- swiper-container -->
+        </div>
+        <!-- /.slider -->
       </div>
       <!-- /.container -->
     </section>
@@ -341,9 +394,9 @@
         <div class="unreleased-header">
           <h1 class="unreleased-title">Неизданные книги</h1>
           <div class="unreleased__logo">
-            <img src="img/next.png" alt="Icon: next" class="unreleased__logo" />
+            <img src="img/prev.svg" alt="Icon: next" class="unreleased__logo" />
             <img
-              src="img/back.png"
+              src="img/next.svg"
               alt="Icon: back"
               class="unreleased__logo-icon"
             />
@@ -382,6 +435,7 @@
       <!-- /.container -->
     </section>
     <!-- /.unreleased -->
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
