--- a/index.html
+++ b/index.html
@@ -331,62 +331,61 @@
         </div>
         <!-- /.more -->
         <div class="line"></div>
-
-        <div class="slider">
-          <!-- Slider main container -->
-          <div class="swiper-container">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide">
-                <div class="slider-block">
-                  <img
-                    src="img/slider/logo-1.svg"
-                    alt="Icon"
-                    class="slider-icon"
-                  />
-                  <h2 class="slider-title">Бизнес & Финансы</h2>
-                  <span class="slider-text">Книги про мир бизнеса</span>
-                </div>
-                <div class="slider-block">
-                  <img
-                    src="img/slider/logo-2.svg"
-                    alt="Icon"
-                    class="slider-icon"
-                  />
-                  <h2 class="slider-title">Самомотиватия</h2>
-                  <span class="slider-text">Книги о мотивации</span>
-                </div>
-                <div class="slider-block">
-                  <img
-                    src="img/slider/logo-3.svg"
-                    alt="Icon"
-                    class="slider-icon"
-                  />
-                  <h2 class="slider-title">Романы Теленовеллы</h2>
-                  <span class="slider-text">Книги с крутыми историями</span>
-                </div>
-                <div class="slider-block">
-                  <img
-                    src="img/slider/logo-4.svg"
-                    alt="Icon"
-                    class="slider-icon"
-                  />
-                  <h2 class="slider-title">Навыки будущего</h2>
-                  <span class="slider-text">Книги для самоподготовки </span>
-                </div>
-              </div>
-            </div>
-
-            <!-- If we need navigation buttons -->
-            <button class="slider-button slider-button--prev"></button>
-            <button class="slider-button slider-button--next"></button>
-          </div>
-          <!-- swiper-container -->
-        </div>
-        <!-- /.slider -->
       </div>
       <!-- /.container -->
+      <div class="slider">
+        <!-- Slider main container -->
+        <div class="swiper-container">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <div class="slider-block">
+                <img
+                  src="img/slider/logo-1.svg"
+                  alt="Icon"
+                  class="slider-icon"
+                />
+                <h2 class="slider-title">Бизнес & Финансы</h2>
+                <span class="slider-text">Книги про мир бизнеса</span>
+              </div>
+              <div class="slider-block">
+                <img
+                  src="img/slider/logo-2.svg"
+                  alt="Icon"
+                  class="slider-icon"
+                />
+                <h2 class="slider-title">Самомотиватия</h2>
+                <span class="slider-text">Книги о мотивации</span>
+              </div>
+              <div class="slider-block">
+                <img
+                  src="img/slider/logo-3.svg"
+                  alt="Icon"
+                  class="slider-icon"
+                />
+                <h2 class="slider-title">Романы Теленовеллы</h2>
+                <span class="slider-text">Книги с крутыми историями</span>
+              </div>
+              <div class="slider-block">
+                <img
+                  src="img/slider/logo-4.svg"
+                  alt="Icon"
+                  class="slider-icon"
+                />
+                <h2 class="slider-title">Навыки будущего</h2>
+                <span class="slider-text">Книги для самоподготовки </span>
+              </div>
+            </div>
+          </div>
+
+          <!-- If we need navigation buttons -->
+          <button class="slider-button slider-button--prev"></button>
+          <button class="slider-button slider-button--next"></button>
+        </div>
+        <!-- swiper-container -->
+      </div>
+      <!-- /.slider -->
     </section>
     <!-- /.recomendation -->
     <section class="unreleased">
@@ -435,6 +434,28 @@
       <!-- /.container -->
     </section>
     <!-- /.unreleased -->
+    <section class="history">
+      <div class="container">
+        <div class="history-text">
+          <h1 class="history-title">История Автора</h1>
+          <p class="history-text">
+            Это раздел авторского рассказа. Каждую неделю мы стараемся
+            рассказать вам историю писателя. Расскажем всем о закулисье их книг.
+          </p>
+        </div>
+        <!-- /.history-text -->
+        <div class="history-video"></div>
+        <!-- /.history-video -->
+        <div class="history-video"></div>
+        <!-- /.history-video -->
+        <div class="history-video"></div>
+        <!-- /.history-video -->
+        <div class="history-video"></div>
+        <!-- /.history-video -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.history -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
