--- a/thankyou.html
+++ b/thankyou.html
@@ -59,7 +59,7 @@
 
     <div class="container">
       <h2 class="thankyou-title">Сообщение отправлено!</h2>
-      <a href="index.html" class="thankyou-button">На главную</a>
+      <a href="index.html" class="thankyou-button">Назад</a>
     </div>
 
     <section class="footer">
